# sotto

./: .gitignore  HANDOFF.md  README.md  TODO.md  pyproject.toml  test_harness.py  test_integration.py  test_record.py
src/sotto/: audio.py  config.py  cuda_utils.py  hardware.py  history.py  hotkey.py  indicator.py  main.py  paste.py  preview.py  settings_ui.py  sounds.py  splash.py  startup.py  transcribe.py  tray.py
tests/: test_audio.py  test_hotkey.py  test_indicator.py  test_transcribe.py
